<resources>
    <string name="app_name">TinyJobs</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="ipAddressVm">http://10.0.3.2:5000/</string>
    <string name="ipAddressTel">http://192.168.1.3:5000/</string>
    <string name="ipAddressExt">http://109.173.223.4/</string>
    <string name="userName">no name</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_match_password">Repeat password</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in">Sign in</string>
    <string name="postal_address">Postal address</string>
    <string name="phone_number">Phone number</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="passwords_dont_match">Passwords differ</string>
    <string name="wrong_credentials">Email or password incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="no_database_connection">Can\'t connect to database</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_menu">Title Jobs / Menu</string>
    <string name="title_activity_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="find_tiny_jobs">Find tiny jobs</string>
    <string name="place_tiny_task">Place tiny jobs</string>
    <string name="my_tasks">My tasks</string>
    <string name="get_more_points">Get more points</string>
    <string name="hello_world">Hello world!</string>
    <string name="sort_by">Sort by:</string>
    <!-- -
        This is an ad unit ID for a banner test ad. Replace with your own banner ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="title_activity_find_tiny_jobs">FindTinyJobsActivity</string>
    <string name="title_activity_get_more_points">Menu / Get More Points</string>

    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>
    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="title_activity_raised_row_detail">RaisedRowDetail</string>
    <string name="title_activity_finished_row_detail">FinishedRowDetail</string>
    <string name="title_activity_taken_row_detail">TakenRowDetail</string>
</resources>
